--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <a href="./hinanna.mp3.mp3"download="hinannasong">download audio</a>
             <hr>
 
-    <img src="./asserts/rosy.jpg" width="20%"height="20%">
+    <img src="./asserts/saipallavi.jpg" width="20%"height="20%">
             <br>
     <audio controls>
         <source src="./shyamsingharoy.mp3" type="audio/mp3"></audio><br>
